@@ -1,4 +1,5 @@
 * Improve float time widget to handle year, month, week and day
+  and handle float_time attribute for contextual time convertion
 
 Version 1.2.0 - 2009-04-20
 * Bug fixes (see mercurial logs for details)
